# policykit-unity8

./: .bzrignore  .gitignore  CMakeLists.txt
data/: CMakeLists.txt  policykit-unity8.conf.in  policykit-unity8.service.in  unity8-policy-kit.conf.in
debian/: changelog  control  copyright  rules
docs/: Doxyfile  conf.py  index.rst  interactions.dot
po/: POTFILES.in
service/: CMakeLists.txt  agent-glib.cpp  agent-glib.h  agent.cpp  agent.h  auth-manager.cpp  auth-manager.h  authentication.cpp  authentication.h  glib-thread.cpp  glib-thread.h  main.cpp  polkit-iface.cpp  polkit-iface.h  session-iface.cpp  session-iface.h
tests/: CMakeLists.txt  agent-test.cpp  auth-manager-test.cpp  authentication-test.cpp  notifications-mock.h  policykit-mock.h  polkit-lib-mock.cpp
